Remove hexo deploy directory

--- a/source/_posts/美团饿了么.md
+++ b/source/_posts/美团饿了么.md
@@ -1,31 +1,17 @@
+---
 title: 美团饿了么
 tags:
   - 外卖
 categories:
   - 生活
-cover: 'https://s21.ax1x.com/2025/08/05/pVUDsDf.jpg'
+cover: https://s21.ax1x.com/2025/08/05/pVUDsDf.jpg
 date: 2025-08-03 04:32:00
 ---
-
 今天点了个麻辣烫和一杯奶茶122321321311111111111111111111111111111111
 完了，肚子有点不舒服，感觉麻辣烫有问题，要拉肚子了
 
-
-测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试11111111111111111111112222222
-
-
+测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试11111111111111111111112222222 后台管理测试
 
 - ![pVUDsDf.jpg](https://s21.ax1x.com/2025/08/05/pVUDsDf.jpg)
 
 + ![pVUDsDf.jpg](https://s21.ax1x.com/2025/08/05/pVUDsDf.jpg)
-
-
-
-
-
-
-
-
-
-
-
