新增文章-资料分析1-4

--- a/source/_posts/旅行.md
+++ b/source/_posts/旅行.md
@@ -1,9 +1,10 @@
 ---
 title: 旅行
 tags:
-  - 文档
+  - 旅行
 cover: https://s21.ax1x.com/2025/08/12/pVw9KJ0.jpg
-categories: []
+categories:
+  - 生活
 date: 2025-07-30 01:33:19
 ---
 往年出差之余旅游照片
