--- a/source/_posts/美团饿了么.md
+++ b/source/_posts/美团饿了么.md
@@ -39,3 +39,5 @@ date: 2025-08-03 04:32:00
 ---
 
 ![pVw9KJ0.jpg](https://s21.ax1x.com/2025/08/12/pVw9KJ0.jpg)
+
+![乡村小路-乡野单车](https://preview.cloud.189.cn/image/imageAction?param=03E527B8B0CA1BC1B7159195BC00829F3479DDDB7A1C8149DF77A2CC9310AD66626610E1FCB7A42F8632389F8DF1C1590B041AD85AF695A37578E785355FE98A8AD9179DD2AD230FB5C20A2F3DC0AE79BDAEF352C2E145B83CE4A9B2E665DE0C51B327E139DA8F1504877B9989E9F91570055AAA)
