更新部分图片地址

--- a/source/_posts/为博客底部添加一排宠物.md
+++ b/source/_posts/为博客底部添加一排宠物.md
@@ -7,12 +7,12 @@ categories:
   - 教程
   - hexo
 cover: >-
-  https://lz.qaiu.top/parser?url=https://cloud.189.cn/web/share?code=N3me6fbuQBZj（访问码：db08）
+  https://preview.cloud.189.cn/image/imageAction?param=AD0C19EB5B74DC11FB56370E2C23A3F3CF2C16C2516C99EBD8A03E73F8F4CA997B496E49D44B952E70B37B6177944AC1FDA498ADE7F988836723116AF739F420A767DA0ABAE3E58C5663EFB93B5582BC9DEC8CBD686AB372FC59CAB9D64DE3CEC7E913281DAC823DD59444EC40571C328D96E5AD
 date: 2025-09-04 18:57:14
 ---
 ## 效果
 
-![宠物.png](https://lz.qaiu.top/parser?url=https://cloud.189.cn/web/share?code=fY7BBbQNV7vi（访问码：lf9l）)
+![宠物.png](https://preview.cloud.189.cn/image/imageAction?param=2890CA30A0F4503B3B5A848178487A3DA129FB8918F754F028209728517142C62D7A2696BF9D2832195A4DE25CD02B58E6919E29E43FDEF4BEAF8CAA65958CA181AEE5E7F02FE91ED21CA9CB52A9816176380873E604381F3D991280ECBBAD81DB9DE083DCA83296774207A9D5EF01C82BF375AF)
 
 ## 教程
 
